# virtualOS

./: .env.example  .gitignore  README.md  commands.py  custom_tools.py  deploy_console.sh  features.json  llmpedia.py  pyproject.toml  research_tools.py  serve_web.py  settings.py  theme.py  tui.py  tui.tcss  virtual_agent.py
aisdk-port/: .gitignore  package-lock.json  package.json  tsconfig.json  vercel.json
aisdk-port/api/: agent.ts
aisdk-port/src/: agent.ts  cli.ts  models.ts  virtual-fs.ts
aisdk-port/tests/: cli.test.ts  file-tools.test.ts  llmpedia.test.ts  models.test.ts  research-tools.test.ts  virtual-fs.test.ts
docs/: PORT_AISDK.md  ROADMAP.md  STRUCTURE.md  VISUAL_IDENTITY.md
docs/history/: 20251208_tui_interface.md  20251208_workspace_sync.md  20251216_agent-008_structured_file_tools.md  20251216_architecture_review.md  20251216_research_tools.md  20251216_tui-001_slash_commands.md  20251216_tui-009_ux_improvements.md  20251217_model-001_multi_model_support.md  20251217_research_agent_tools.md  20251218_cli-001_oneshot_mode.md  20251218_cli-001_session_history.md  20251218_test_coverage.md  20251218_tui-002_theme_system.md  20251219_agent-004_grep_search.md  20251219_port-001-analysis.md  20251219_port-003_research_tools.md  20251219_port-004.1_sdk_compat.md  20251219_port-004_multi_model.md  20251219_port-005_vercel_api.md  20251219_port-006_oneshot_parity.md  (+4 more)
tests/: conftest.py  test_commands.py  test_tools.py  test_virtual_fs.py
themes/: amber-dark.yaml  catppuccin-macchiato.yaml  gruvbox-dark.yaml  solarized-light.yaml
(+3 files in other folders)
