[project]
name = "pydantic-agents"
version = "0.1.0"
description = "PydanticAI agent experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=1.0.0",
    "textual>=1.0.0",
    "psycopg2-binary>=2.9",
    "google-genai>=0.3",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
